--- a/CG.Output.UnrealCpp.csproj
+++ b/CG.Output.UnrealCpp.csproj
@@ -3,8 +3,9 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <AssemblyName>UnrealCpp</AssemblyName>
-        <RootNamespace>CG.Output.UnrealCpp</RootNamespace>
+        <RootNamespace>CG.Output</RootNamespace>
         <Nullable>enable</Nullable>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
